--- a/kms/package.json
+++ b/kms/package.json
@@ -121,8 +121,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.0-beta.59"
+    "theprogrammablemind": "7.5.1"
   },
-  "version": "7.5.0-beta.59",
+  "version": "7.5.1",
   "license": "ISC"
 }
