--- a/kms/package.json
+++ b/kms/package.json
@@ -46,6 +46,9 @@
     "common/currency.test.json",
     "common/dialogues.js",
     "common/dialogues.test.json",
+    "common/dimension.js",
+    "common/dimension.instance.json",
+    "common/dimension.test.json",
     "common/emotions.js",
     "common/emotions.test.json",
     "common/emotions.instance.json",
