move stuff to stm

--- a/kms/package.json
+++ b/kms/package.json
@@ -101,6 +101,8 @@
     "common/spock.test.json",
     "common/stgame.js",
     "common/stgame.test.json",
+    "common/stm.js",
+    "common/stm.test.json",
     "common/tell.js",
     "common/tell.test.json",
     "common/tester.js",
