forulas wip / add debug details/ fix errr in g

--- a/kms/package.json
+++ b/kms/package.json
@@ -4,9 +4,10 @@
     "jest": "^26.6.3"
   },
   "scripts": {
-    "tod": "node inspect node_modules/.bin/jest --runInBand -t ONE23",
+    "tod": "node inspect node_modules/.bin/jest --runInBand -t NEO23",
     "test:debug": "node inspect node_modules/.bin/jest --runInBand --config ./jest.config.json",
-    "to": "node node_modules/.bin/jest --runInBand -t ONE23",
+    "to": "node node_modules/.bin/jest --runInBand -t NEO23",
+    "tos": "node node_modules/.bin/jest --runInBand -t NEOS23",
     "test": "jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch"
   },
@@ -24,6 +25,7 @@
   "name": "tpmkms",
   "files": [
     "main.js",
+    "common/helpers/math.js",
     "common/helpers/properties.js",
     "common/helpers/ordering.js",
     "common/helpers.js",
