--- a/kms/package.json
+++ b/kms/package.json
@@ -25,7 +25,7 @@
   "name": "tpmkms",
   "files": [
     "main.js",
-    "common/helpers/math.js",
+    "common/helpers/formulas.js",
     "common/helpers/properties.js",
     "common/helpers/ordering.js",
     "common/helpers.js",
@@ -56,6 +56,8 @@
     "common/emotions.instance.json",
     "common/events.js",
     "common/events.test.json",
+    "common/formulas.js",
+    "common/formulas.test.json",
     "common/help.js",
     "common/help.test.json",
     "common/hierarchy.js",
