refactoring + more details in dimension + formaul

--- a/kms/package.json
+++ b/kms/package.json
@@ -84,6 +84,8 @@
     "common/people.js",
     "common/people.instance.json",
     "common/people.test.json",
+    "common/pos.js",
+    "common/pos.test.json",
     "common/ordering.js",
     "common/ordering.instance.json",
     "common/ordering.test.json",
