--- a/kms/package.json
+++ b/kms/package.json
@@ -58,6 +58,8 @@
     "common/events.test.json",
     "common/formulas.js",
     "common/formulas.test.json",
+    "common/gdefaults.js",
+    "common/gdefaults.test.json",
     "common/help.js",
     "common/help.test.json",
     "common/hierarchy.js",
