--- a/kms/package.json
+++ b/kms/package.json
@@ -48,6 +48,9 @@
     "common/currency.test.json",
     "common/dialogues.js",
     "common/dialogues.test.json",
+    "common/dimensionTemplate.js",
+    "common/dimensionTemplate.instance.json",
+    "common/dimensionTemplate.test.json",
     "common/dimension.js",
     "common/dimension.instance.json",
     "common/dimension.test.json",
@@ -113,6 +116,7 @@
     "common/stm.test.json",
     "common/tell.js",
     "common/tell.test.json",
+    "common/testing.js",
     "common/tester.js",
     "common/tester.test.json",
     "common/time.js",
