add mising fril

--- a/kms/package.json
+++ b/kms/package.json
@@ -117,6 +117,7 @@
     "common/tell.js",
     "common/tell.test.json",
     "common/testing.js",
+    "common/testing.test.json",
     "common/tester.js",
     "common/tester.test.json",
     "common/time.js",
