--- a/kms/package.json
+++ b/kms/package.json
@@ -139,8 +139,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.5"
+    "theprogrammablemind": "7.5.5-beta.0"
   },
-  "version": "7.5.5",
+  "version": "7.5.5-beta.0",
   "license": "ISC"
 }
