--- a/kms/package.json
+++ b/kms/package.json
@@ -11,6 +11,27 @@
     "test": "jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch"
   },
+  "sections": [
+    {
+      "name": "Basic Types",
+      "description": "Definition for basic types of things",
+      "includes": ["currency", "numbers", "people", "time"] },
+    {
+      "name": "General",
+      "description": "General purpose KM's",
+      "includes": []
+    },
+    {
+      "name": "Misc",
+      "description": "Fun stuff I was fiddling around with",
+      "includes": ["javascript", "scorekeeper", "reports", "tell", "pipboy"]
+    },
+    {
+      "name": "Trek-like Characters",
+      "description": "These KM's are for setting up a Trek-like game with characters that can be talked to.",
+      "includes": [ "crew", "stgame", "kirk", "spock" ]
+    }
+  ],
   "keywords": [
     "NLP",
     "NLU",
