--- a/kms/package.json
+++ b/kms/package.json
@@ -15,7 +15,13 @@
     {
       "name": "Basic Types",
       "description": "Definition for basic types of things",
-      "includes": ["currency", "numbers", "people", "time"] },
+      "includes": [
+        "currency",
+        "numbers",
+        "people",
+        "time"
+      ]
+    },
     {
       "name": "General",
       "description": "General purpose KM's",
@@ -24,12 +30,23 @@
     {
       "name": "Misc",
       "description": "Fun stuff I was fiddling around with",
-      "includes": ["javascript", "scorekeeper", "reports", "tell", "pipboy"]
+      "includes": [
+        "javascript",
+        "scorekeeper",
+        "reports",
+        "tell",
+        "pipboy"
+      ]
     },
     {
       "name": "Trek-like Characters",
       "description": "These KM's are for setting up a Trek-like game with characters that can be talked to.",
-      "includes": [ "crew", "stgame", "kirk", "spock" ]
+      "includes": [
+        "crew",
+        "stgame",
+        "kirk",
+        "spock"
+      ]
     }
   ],
   "keywords": [
@@ -160,8 +177,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.5-beta.0"
+    "theprogrammablemind": "7.5.5-beta.1"
   },
-  "version": "7.5.5-beta.0",
+  "version": "7.5.5-beta.1",
   "license": "ISC"
 }
