get parenthesis going

--- a/kms/package.json
+++ b/kms/package.json
@@ -129,6 +129,8 @@
     "common/people.test.json",
     "common/pos.js",
     "common/pos.test.json",
+    "common/punctuation.js",
+    "common/punctuation.test.json",
     "common/ordering.js",
     "common/ordering.instance.json",
     "common/ordering.test.json",
