add missing file

--- a/kms/package.json
+++ b/kms/package.json
@@ -116,6 +116,8 @@
     "common/meta.test.json",
     "common/math.js",
     "common/math.test.json",
+    "common/mathTemplate.js",
+    "common/mathTemplate.test.json",
     "common/numbers.js",
     "common/numbers.test.json",
     "common/pipboyTemplate.js",
