add mising file

--- a/kms/package.json
+++ b/kms/package.json
@@ -117,6 +117,7 @@
     "common/math.js",
     "common/math.test.json",
     "common/mathTemplate.js",
+    "common/mathTemplate.instance.json",
     "common/mathTemplate.test.json",
     "common/numbers.js",
     "common/numbers.test.json",
