--- a/kms/package.json
+++ b/kms/package.json
@@ -182,8 +182,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.5-beta.13"
+    "theprogrammablemind": "7.5.6"
   },
-  "version": "7.5.5-beta.13",
+  "version": "7.5.6",
   "license": "ISC"
 }
