--- a/kms/package.json
+++ b/kms/package.json
@@ -28,6 +28,39 @@
       "includes": []
     },
     {
+      "name": "Hidden",
+      "description": "Don't show in the UI",
+      "includes": [
+        "dimensionTemplate",
+        "mathTemplate",
+        "pipboyTemplate"
+      ]
+    },
+    {
+      "name": "Language",
+      "description": "Knowledge related to language",
+      "includes": [
+        "dialogues",
+        "gdefaults",
+        "pos",
+        "punctuation",
+        "stm",
+        "ui"
+      ]
+    },
+    {
+      "name": "Math",
+      "description": "Knowledge related to mathematics",
+      "includes": [
+        "math",
+        "formulas",
+        "pos",
+        "punctuation",
+        "stm",
+        "ui"
+      ]
+    },
+    {
       "name": "Misc",
       "description": "Fun stuff I was fiddling around with",
       "includes": [
