wip formulas + dimension

--- a/kms/package.json
+++ b/kms/package.json
@@ -32,6 +32,7 @@
       "description": "Don't show in the UI",
       "includes": [
         "dimensionTemplate",
+        "formulasTemplate",
         "mathTemplate",
         "pipboyTemplate"
       ]
@@ -132,6 +133,9 @@
     "common/events.test.json",
     "common/formulas.js",
     "common/formulas.test.json",
+    "common/formulasTemplate.js",
+    "common/formulasTemplate.instance.json",
+    "common/formulasTemplate.test.json",
     "common/gdefaults.js",
     "common/gdefaults.test.json",
     "common/help.js",
