wip -> move up stm lookup eventually

--- a/kms/package.json
+++ b/kms/package.json
@@ -62,6 +62,13 @@
       ]
     },
     {
+      "name": "Physics",
+      "description": "Knowledge related to physics",
+      "includes": [
+        "dimension"
+      ]
+    },
+    {
       "name": "Misc",
       "description": "Fun stuff I was fiddling around with",
       "includes": [
