add a bunch of dimensions

--- a/kms/package.json
+++ b/kms/package.json
@@ -65,7 +65,11 @@
       "name": "Physics",
       "description": "Knowledge related to physics",
       "includes": [
-        "dimension"
+        "dimension",
+        "length",
+        "pressure",
+        "temperature",
+        "weight"
       ]
     },
     {
@@ -158,6 +162,9 @@
     "common/meta.instance.json",
     "common/helpers/meta.js",
     "common/meta.test.json",
+    "common/length.js",
+    "common/length.instance.json",
+    "common/length.test.json",
     "common/math.js",
     "common/math.test.json",
     "common/mathTemplate.js",
@@ -176,6 +183,9 @@
     "common/people.test.json",
     "common/pos.js",
     "common/pos.test.json",
+    "common/pressure.js",
+    "common/pressure.instance.json",
+    "common/pressure.test.json",
     "common/punctuation.js",
     "common/punctuation.test.json",
     "common/ordering.js",
@@ -203,6 +213,9 @@
     "common/stm.test.json",
     "common/tell.js",
     "common/tell.test.json",
+    "common/temperature.js",
+    "common/temperature.instance.json",
+    "common/temperature.test.json",
     "common/testing.js",
     "common/testing.test.json",
     "common/tester.js",
@@ -211,7 +224,10 @@
     "common/time.test.json",
     "common/ui.js",
     "common/ui.instance.json",
-    "common/ui.test.json"
+    "common/ui.test.json",
+    "common/weight.js",
+    "common/weight.instance.json",
+    "common/weight.test.json"
   ],
   "author": "dev@thinktelligence.com",
   "dependencies": {
