--- a/kms/package.json
+++ b/kms/package.json
@@ -226,8 +226,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.6-beta.0"
+    "theprogrammablemind": "7.5.7"
   },
-  "version": "7.5.6-beta.0",
+  "version": "7.5.7",
   "license": "ISC"
 }
