fix up for deploy

--- a/kms/package.json
+++ b/kms/package.json
@@ -25,7 +25,15 @@
     {
       "name": "General",
       "description": "General purpose KM's",
-      "includes": []
+      "includes": [
+        "avatar",
+        "comparable",
+        "countable",
+        "help",
+        "meta",
+        "hierarchy",
+        "properties"
+      ]
     },
     {
       "name": "Hidden",
@@ -73,7 +81,14 @@
       ]
     },
     {
-      "name": "Misc",
+      "name": "Basic Facts",
+      "description": "Knowledge related to basic facts",
+      "includes": [
+        "animals"
+      ]
+    },
+    {
+      "name": "Fun",
       "description": "Fun stuff I was fiddling around with",
       "includes": [
         "javascript",
@@ -84,9 +99,10 @@
       ]
     },
     {
-      "name": "Trek-like Characters",
+      "name": "Characters",
       "description": "These KM's are for setting up a Trek-like game with characters that can be talked to.",
       "includes": [
+        "characters",
         "crew",
         "stgame",
         "kirk",
