--- a/kms/package.json
+++ b/kms/package.json
@@ -63,11 +63,7 @@
       "description": "Knowledge related to mathematics",
       "includes": [
         "math",
-        "formulas",
-        "pos",
-        "punctuation",
-        "stm",
-        "ui"
+        "formulas"
       ]
     },
     {
