--- a/kms/package.json
+++ b/kms/package.json
@@ -255,8 +255,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.7-beta.14"
+    "theprogrammablemind": "7.5.8"
   },
-  "version": "7.5.7-beta.14",
+  "version": "7.5.8",
   "license": "ISC"
 }
