switch hierarchy to using levels + new id

--- a/kms/package.json
+++ b/kms/package.json
@@ -18,8 +18,7 @@
       "includes": [
         "currency",
         "numbers",
-        "people",
-        "time"
+        "people"
       ]
     },
     {
