start on fastfood ordering km

--- a/kms/package.json
+++ b/kms/package.json
@@ -81,7 +81,8 @@
       "name": "Basic Facts",
       "description": "Knowledge related to basic facts",
       "includes": [
-        "animals"
+        "animals",
+        "foods"
       ]
     },
     {
@@ -92,7 +93,8 @@
         "scorekeeper",
         "reports",
         "tell",
-        "pipboy"
+        "pipboy",
+        "fastfood"
       ]
     },
     {
