script for generating main + add missing stuff

--- a/kms/package.json
+++ b/kms/package.json
@@ -157,6 +157,12 @@
     "common/emotions.instance.json",
     "common/events.js",
     "common/events.test.json",
+    "common/foods.js",
+    "common/foods.test.json",
+    "common/foods.instance.json",
+    "common/fastfood.js",
+    "common/fastfood.test.json",
+    "common/fastfood.instance.json",
     "common/formulas.js",
     "common/formulas.test.json",
     "common/formulasTemplate.js",
