NOTE make sizable KM. more details in fastfood

--- a/kms/package.json
+++ b/kms/package.json
@@ -32,7 +32,8 @@
         "help",
         "hierarchy",
         "ordering",
-        "properties"
+        "properties",
+        "sizeable"
       ]
     },
     {
