move modifies to its own file

--- a/kms/package.json
+++ b/kms/package.json
@@ -28,6 +28,7 @@
       "includes": [
         "avatar",
         "comparable",
+        "concept",
         "countable",
         "help",
         "hierarchy",
