account for config not automatically setting api/objects/config

--- a/kms/package.json
+++ b/kms/package.json
@@ -126,6 +126,7 @@
   "files": [
     "main.js",
     "common/helpers/formulas.js",
+    "common/helpers/frankenhash.js",
     "common/helpers/properties.js",
     "common/helpers/ordering.js",
     "common/helpers.js",
