--- a/kms/package.json
+++ b/kms/package.json
@@ -251,7 +251,12 @@
     "common/ui.test.json",
     "common/weight.js",
     "common/weight.instance.json",
-    "common/weight.test.json"
+    "common/weight.test.json",
+    "common/math.instance.json",
+    "common/concept.js",
+    "common/concept.test.json",
+    "common/concept.instance.json",
+    "common/sizeable.js"
   ],
   "author": "dev@thinktelligence.com",
   "dependencies": {
@@ -266,8 +271,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.8-beta.33"
+    "theprogrammablemind": "7.5.8-beta.37"
   },
-  "version": "7.5.8-beta.33",
+  "version": "7.5.8-beta.37",
   "license": "ISC"
 }
