--- a/kms/package.json
+++ b/kms/package.json
@@ -124,112 +124,118 @@
   "description": "Reusable libraries for Entodicton, a natural language to json converter",
   "name": "tpmkms",
   "files": [
-    "main.js",
-    "common/helpers/formulas.js",
-    "common/helpers/frankenhash.js",
-    "common/helpers/properties.js",
-    "common/helpers/ordering.js",
-    "common/helpers.js",
-    "common/helpers/properties.js",
+    "common/animals.instance.json",
     "common/animals.js",
     "common/animals.test.json",
-    "common/animals.instance.json",
     "common/avatar.js",
     "common/avatar.test.json",
     "common/characters.js",
     "common/characters.test.json",
     "common/comparable.js",
     "common/comparable.test.json",
+    "common/concept.instance.json",
+    "common/concept.js",
+    "common/concept.test.json",
     "common/countable.js",
     "common/countable.test.json",
+    "common/crew.instance.json",
     "common/crew.js",
     "common/crew.test.json",
-    "common/crew.instance.json",
     "common/currency.js",
     "common/currency.test.json",
     "common/dialogues.js",
     "common/dialogues.test.json",
-    "common/dimensionTemplate.js",
-    "common/dimensionTemplate.instance.json",
-    "common/dimensionTemplate.test.json",
-    "common/dimension.js",
     "common/dimension.instance.json",
+    "common/dimension.js",
     "common/dimension.test.json",
+    "common/dimensionTemplate.instance.json",
+    "common/dimensionTemplate.js",
+    "common/dimensionTemplate.test.json",
+    "common/emotions.instance.json",
     "common/emotions.js",
     "common/emotions.test.json",
-    "common/emotions.instance.json",
     "common/events.js",
     "common/events.test.json",
-    "common/foods.js",
-    "common/foods.test.json",
-    "common/foods.instance.json",
+    "common/fastfood.instance.json",
     "common/fastfood.js",
     "common/fastfood.test.json",
-    "common/fastfood.instance.json",
+    "common/foods.instance.json",
+    "common/foods.js",
+    "common/foods.test.json",
     "common/formulas.js",
     "common/formulas.test.json",
-    "common/formulasTemplate.js",
     "common/formulasTemplate.instance.json",
+    "common/formulasTemplate.js",
     "common/formulasTemplate.test.json",
     "common/gdefaults.js",
     "common/gdefaults.test.json",
     "common/help.js",
     "common/help.test.json",
+    "common/helpers.js",
+    "common/helpers/formulas.js",
+    "common/helpers/frankenhash.js",
+    "common/helpers/meta.js",
+    "common/helpers/ordering.js",
+    "common/helpers/properties.js",
+    "common/helpers/properties.js",
     "common/hierarchy.js",
     "common/hierarchy.test.json",
     "common/javascript.js",
     "common/javascript.test.json",
+    "common/kirk.instance.json",
     "common/kirk.js",
     "common/kirk.test.json",
-    "common/kirk.instance.json",
-    "common/meta.js",
-    "common/meta.instance.json",
-    "common/helpers/meta.js",
-    "common/meta.test.json",
-    "common/length.js",
     "common/length.instance.json",
+    "common/length.js",
     "common/length.test.json",
+    "common/math.instance.json",
     "common/math.js",
     "common/math.test.json",
-    "common/mathTemplate.js",
     "common/mathTemplate.instance.json",
+    "common/mathTemplate.js",
     "common/mathTemplate.test.json",
+    "common/meta.instance.json",
+    "common/meta.js",
+    "common/meta.test.json",
     "common/numbers.js",
     "common/numbers.test.json",
-    "common/pipboyTemplate.js",
-    "common/pipboyTemplate.instance.json",
-    "common/pipboyTemplate.test.json",
-    "common/pipboy.js",
-    "common/pipboy.instance.json",
-    "common/pipboy.test.json",
-    "common/people.js",
+    "common/ordering.instance.json",
+    "common/ordering.js",
+    "common/ordering.test.json",
     "common/people.instance.json",
+    "common/people.js",
     "common/people.test.json",
+    "common/pipboy.instance.json",
+    "common/pipboy.js",
+    "common/pipboy.test.json",
+    "common/pipboyTemplate.instance.json",
+    "common/pipboyTemplate.js",
+    "common/pipboyTemplate.test.json",
+    "common/pokemon.instance.json",
+    "common/pokemon.js",
+    "common/pokemon.test.json",
     "common/pos.js",
     "common/pos.test.json",
-    "common/pressure.js",
     "common/pressure.instance.json",
+    "common/pressure.js",
     "common/pressure.test.json",
+    "common/properties.instance.json",
+    "common/properties.js",
+    "common/properties.test.json",
     "common/punctuation.js",
     "common/punctuation.test.json",
-    "common/ordering.js",
-    "common/ordering.instance.json",
-    "common/ordering.test.json",
-    "common/pokemon.js",
-    "common/pokemon.instance.json",
-    "common/pokemon.test.json",
-    "common/properties.js",
-    "common/properties.instance.json",
-    "common/properties.test.json",
-    "common/reports.js",
     "common/reports.instance.json",
+    "common/reports.js",
     "common/reports.test.json",
     "common/runtime.js",
-    "common/scorekeeper.js",
     "common/scorekeeper.instance.json",
+    "common/scorekeeper.js",
     "common/scorekeeper.test.json",
-    "common/spock.js",
+    "common/sizeable.instance.json",
+    "common/sizeable.js",
+    "common/sizeable.test.json",
     "common/spock.instance.json",
+    "common/spock.js",
     "common/spock.test.json",
     "common/stgame.js",
     "common/stgame.test.json",
@@ -237,26 +243,22 @@
     "common/stm.test.json",
     "common/tell.js",
     "common/tell.test.json",
-    "common/temperature.js",
     "common/temperature.instance.json",
+    "common/temperature.js",
     "common/temperature.test.json",
-    "common/testing.js",
-    "common/testing.test.json",
     "common/tester.js",
     "common/tester.test.json",
+    "common/testing.js",
+    "common/testing.test.json",
     "common/time.js",
     "common/time.test.json",
-    "common/ui.js",
     "common/ui.instance.json",
+    "common/ui.js",
     "common/ui.test.json",
-    "common/weight.js",
     "common/weight.instance.json",
+    "common/weight.js",
     "common/weight.test.json",
-    "common/math.instance.json",
-    "common/concept.js",
-    "common/concept.test.json",
-    "common/concept.instance.json",
-    "common/sizeable.js"
+    "main.js"
   ],
   "author": "dev@thinktelligence.com",
   "dependencies": {
@@ -271,8 +273,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.8-beta.37"
+    "theprogrammablemind": "7.5.8-beta.38"
   },
-  "version": "7.5.8-beta.37",
+  "version": "7.5.8-beta.38",
   "license": "ISC"
 }
