--- a/kms/package.json
+++ b/kms/package.json
@@ -232,6 +232,8 @@
     "common/scorekeeper.instance.json",
     "common/scorekeeper.js",
     "common/scorekeeper.test.json",
+    "common/sdefaults.js",
+    "common/sdefaults.test.json",
     "common/sizeable.instance.json",
     "common/sizeable.js",
     "common/sizeable.test.json",
@@ -274,8 +276,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.5.8-beta.39"
+    "theprogrammablemind": "7.5.8-beta.40"
   },
-  "version": "7.5.8-beta.39",
+  "version": "7.5.8-beta.40",
   "license": "ISC"
 }
