rename foods to edible since I am adding drinks

--- a/kms/package.json
+++ b/kms/package.json
@@ -85,7 +85,7 @@
       "description": "Knowledge related to basic facts",
       "includes": [
         "animals",
-        "foods"
+        "edible"
       ]
     },
     {
@@ -160,9 +160,9 @@
     "common/fastfood.instance.json",
     "common/fastfood.js",
     "common/fastfood.test.json",
-    "common/foods.instance.json",
-    "common/foods.js",
-    "common/foods.test.json",
+    "common/edible.instance.json",
+    "common/edible.js",
+    "common/edible.test.json",
     "common/formulas.js",
     "common/formulas.test.json",
     "common/formulasTemplate.instance.json",
