--- a/kms/package.json
+++ b/kms/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "argparse": "^2.0.1",
-    "jest": "^26.6.3"
+    "jest": "^29.7.0"
   },
   "scripts": {
     "tod": "node inspect node_modules/.bin/jest --runInBand -t NEO23",
@@ -136,6 +136,7 @@
     "common/comparable.test.json",
     "common/concept.instance.json",
     "common/concept.js",
+    "common/helpers/concept.js",
     "common/concept.test.json",
     "common/countable.js",
     "common/countable.test.json",
@@ -145,6 +146,7 @@
     "common/currency.js",
     "common/currency.test.json",
     "common/dialogues.js",
+    "common/helpers/dialogues.js",
     "common/dialogues.test.json",
     "common/dimension.instance.json",
     "common/dimension.js",
