ask about drink

--- a/kms/package.json
+++ b/kms/package.json
@@ -34,7 +34,8 @@
         "hierarchy",
         "ordering",
         "properties",
-        "sizeable"
+        "sizeable",
+        "yesno"
       ]
     },
     {
