--- a/kms/package.json
+++ b/kms/package.json
@@ -264,6 +264,8 @@
     "common/weight.instance.json",
     "common/weight.js",
     "common/weight.test.json",
+    "common/yesno.js",
+    "common/yesno.test.json",
     "main.js"
   ],
   "author": "dev@thinktelligence.com",
@@ -279,8 +281,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.7.0-beta.8"
+    "theprogrammablemind": "7.7.0-beta.9"
   },
-  "version": "7.7.0-beta.8",
+  "version": "7.7.0-beta.9",
   "license": "ISC"
 }
