--- a/kms/package.json
+++ b/kms/package.json
@@ -281,8 +281,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.8.0-beta.0"
+    "theprogrammablemind": "7.9.0"
   },
-  "version": "7.8.0-beta.0",
+  "version": "7.9.0",
   "license": "ISC"
 }
