--- a/kms/package.json
+++ b/kms/package.json
@@ -284,5 +284,5 @@
     "theprogrammablemind": "7.10.0-beta.3"
   },
   "version": "7.10.0-beta.3",
-  "license": "ISC"
+  "license": "UNLICENSED"
 }
