--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "dependencies": {
     "node-fetch": "^2.6.1",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.11.1",
+    "theprogrammablemind": "7.11.1-beta.0",
     "pluralize": "^8.0.0",
-    "tpmkms": "7.11.1",
+    "tpmkms": "7.11.1-beta.0",
     "base-64": "^1.0.0"
   },
   "scripts": {
