--- a/kms/package.json
+++ b/kms/package.json
@@ -11,6 +11,9 @@
     "test": "jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch"
   },
+  "bin": {
+    "create-km": "bin/create-km"
+  },
   "sections": [
     {
       "name": "Basic Types",
