add file to package

--- a/kms/package.json
+++ b/kms/package.json
@@ -129,6 +129,7 @@
   "description": "Reusable libraries for Entodicton, a natural language to json converter",
   "name": "tpmkms",
   "files": [
+    "bin/create-km.js",
     "common/animals.instance.json",
     "common/animals.js",
     "common/animals.test.json",
