--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "dependencies": {
     "node-fetch": "^2.6.1",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.12.5-beta.0",
+    "theprogrammablemind": "7.12.6",
     "pluralize": "^8.0.0",
-    "tpmkms": "7.12.5-beta.0",
+    "tpmkms": "7.12.6",
     "base-64": "^1.0.0"
   },
   "scripts": {
