--- a/kms/package.json
+++ b/kms/package.json
@@ -281,8 +281,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.12.6"
+    "theprogrammablemind": "7.12.6-beta.0"
   },
-  "version": "7.12.6",
+  "version": "7.12.6-beta.0",
   "license": "UNLICENSED"
 }
