remove separate templte files since the template can be a mix of stuff now

--- a/kms/package.json
+++ b/kms/package.json
@@ -42,9 +42,6 @@
       "name": "Hidden",
       "description": "Don't show in the UI",
       "includes": [
-        "dimensionTemplate",
-        "formulasTemplate",
-        "pipboyTemplate"
       ]
     },
     {
@@ -149,9 +146,6 @@
     "common/dimension.instance.json",
     "common/dimension.js",
     "common/dimension.test.json",
-    "common/dimensionTemplate.instance.json",
-    "common/dimensionTemplate.js",
-    "common/dimensionTemplate.test.json",
     "common/edible.instance.json",
     "common/edible.js",
     "common/edible.test.json",
@@ -165,9 +159,6 @@
     "common/fastfood.test.json",
     "common/formulas.js",
     "common/formulas.test.json",
-    "common/formulasTemplate.instance.json",
-    "common/formulasTemplate.js",
-    "common/formulasTemplate.test.json",
     "common/gdefaults.js",
     "common/gdefaults.test.json",
     "common/help.js",
@@ -208,9 +199,6 @@
     "common/pipboy.instance.json",
     "common/pipboy.js",
     "common/pipboy.test.json",
-    "common/pipboyTemplate.instance.json",
-    "common/pipboyTemplate.js",
-    "common/pipboyTemplate.test.json",
     "common/pokemon.instance.json",
     "common/pokemon.js",
     "common/pokemon.test.json",
@@ -277,7 +265,7 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.12.8"
+    "theprogrammablemind": "7.12.8-beta.0"
   },
   "version": "7.12.8",
   "license": "UNLICENSED"
