move to other machine

--- a/kms/package.json
+++ b/kms/package.json
@@ -41,7 +41,9 @@
     {
       "name": "Hidden",
       "description": "Don't show in the UI",
-      "includes": []
+      "includes": [
+        "tokenize"
+      ]
     },
     {
       "name": "Language",
