--- a/kms/package.json
+++ b/kms/package.json
@@ -244,6 +244,8 @@
     "common/testing.test.json",
     "common/time.js",
     "common/time.test.json",
+    "common/tokenize.js",
+    "common/tokenize.test.json",
     "common/ui.instance.json",
     "common/ui.js",
     "common/ui.test.json",
@@ -267,8 +269,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.12.8-beta.6"
+    "theprogrammablemind": "7.12.8-beta.7"
   },
-  "version": "7.12.8-beta.6",
+  "version": "7.12.8-beta.7",
   "license": "UNLICENSED"
 }
