--- a/kms/package.json
+++ b/kms/package.json
@@ -269,8 +269,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "7.12.8-beta.10"
+    "theprogrammablemind": "8.0.0"
   },
-  "version": "7.12.8-beta.10",
+  "version": "8.0.0",
   "license": "UNLICENSED"
 }
