--- a/kms/package.json
+++ b/kms/package.json
@@ -131,6 +131,9 @@
     "common/avatar.test.json",
     "common/characters.js",
     "common/characters.test.json",
+    "common/colors.instance.json",
+    "common/colors.js",
+    "common/colors.test.json",
     "common/comparable.js",
     "common/comparable.test.json",
     "common/concept.instance.json",
@@ -270,8 +273,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.0.0-beta.0"
+    "theprogrammablemind": "8.0.0-beta.1"
   },
-  "version": "8.0.0-beta.0",
+  "version": "8.0.0-beta.1",
   "license": "UNLICENSED"
 }
