add negation km

--- a/kms/package.json
+++ b/kms/package.json
@@ -36,7 +36,8 @@
         "ordering",
         "properties",
         "sizeable",
-        "yesno"
+        "yesno",
+        "negatable"
       ]
     },
     {
