--- a/kms/package.json
+++ b/kms/package.json
@@ -195,6 +195,9 @@
     "common/meta.instance.json",
     "common/meta.js",
     "common/meta.test.json",
+    "common/negation.instance.json",
+    "common/negation.js",
+    "common/negation.test.json",
     "common/numbers.js",
     "common/numbers.test.json",
     "common/ordering.instance.json",
@@ -273,8 +276,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.0.0-beta.7"
+    "theprogrammablemind": "8.0.0-beta.9"
   },
-  "version": "8.0.0-beta.7",
+  "version": "8.0.0-beta.9",
   "license": "UNLICENSED"
 }
