rearanging the deck chiars

--- a/kms/package.json
+++ b/kms/package.json
@@ -20,7 +20,9 @@
         "numbers",
         "colors",
         "people",
-        "time"
+        "time",
+        "yesno",
+        "negation"
       ]
     },
     {
@@ -35,9 +37,7 @@
         "hierarchy",
         "ordering",
         "properties",
-        "sizeable",
-        "yesno",
-        "negation"
+        "sizeable"
       ]
     },
     {
