new percentage km

--- a/kms/package.json
+++ b/kms/package.json
@@ -18,6 +18,7 @@
       "includes": [
         "currency",
         "numbers",
+        "percentages",
         "colors",
         "people",
         "time",
