--- a/kms/package.json
+++ b/kms/package.json
@@ -207,6 +207,9 @@
     "common/people.instance.json",
     "common/people.js",
     "common/people.test.json",
+    "common/percentages.instance.json",
+    "common/percentages.js",
+    "common/percentages.test.json",
     "common/pipboy.instance.json",
     "common/pipboy.js",
     "common/pipboy.test.json",
@@ -277,8 +280,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.0.0-beta.10"
+    "theprogrammablemind": "8.0.0-beta.11"
   },
-  "version": "8.0.0-beta.10",
+  "version": "8.0.0-beta.11",
   "license": "UNLICENSED"
 }
