--- a/kms/package.json
+++ b/kms/package.json
@@ -34,6 +34,7 @@
         "comparable",
         "concept",
         "countable",
+        "evaluate",
         "help",
         "hierarchy",
         "ordering",
@@ -52,6 +53,7 @@
       "name": "Language",
       "description": "Knowledge related to language",
       "includes": [
+        "articles",
         "dialogues",
         "gdefaults",
         "meta",
