setup nameable using the stm

--- a/kms/package.json
+++ b/kms/package.json
@@ -54,6 +54,7 @@
       "description": "Knowledge related to language",
       "includes": [
         "articles",
+        "nameable",
         "dialogues",
         "gdefaults",
         "meta",
