--- a/kms/package.json
+++ b/kms/package.json
@@ -132,6 +132,8 @@
     "common/animals.instance.json",
     "common/animals.js",
     "common/animals.test.json",
+    "common/articles.js",
+    "common/articles.test.json",
     "common/avatar.js",
     "common/avatar.test.json",
     "common/characters.js",
@@ -162,6 +164,9 @@
     "common/emotions.instance.json",
     "common/emotions.js",
     "common/emotions.test.json",
+    "common/evaluate.instance.json",
+    "common/evaluate.js",
+    "common/evaluate.test.json",
     "common/events.js",
     "common/events.test.json",
     "common/fastfood.instance.json",
@@ -199,6 +204,9 @@
     "common/meta.instance.json",
     "common/meta.js",
     "common/meta.test.json",
+    "common/nameable.instance.json",
+    "common/nameable.js",
+    "common/nameable.test.json",
     "common/negation.instance.json",
     "common/negation.js",
     "common/negation.test.json",
@@ -283,8 +291,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.0.0-beta.31"
+    "theprogrammablemind": "8.0.0-beta.32"
   },
-  "version": "8.0.0-beta.31",
+  "version": "8.0.0-beta.32",
   "license": "UNLICENSED"
 }
