add listeners fix up for names

--- a/kms/package.json
+++ b/kms/package.json
@@ -46,6 +46,7 @@
       "name": "Hidden",
       "description": "Don't show in the UI",
       "includes": [
+        "listener",
         "tokenize"
       ]
     },
