--- a/kms/package.json
+++ b/kms/package.json
@@ -199,6 +199,8 @@
     "common/length.instance.json",
     "common/length.js",
     "common/length.test.json",
+    "common/listener.js",
+    "common/listener.test.json",
     "common/math.instance.json",
     "common/math.js",
     "common/math.test.json",
@@ -292,8 +294,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.0.0-beta.40"
+    "theprogrammablemind": "8.0.0-beta.41"
   },
-  "version": "8.0.0-beta.40",
+  "version": "8.0.0-beta.41",
   "license": "UNLICENSED"
 }
