--- a/kms/package.json
+++ b/kms/package.json
@@ -142,6 +142,7 @@
     "common/colors.instance.json",
     "common/colors.js",
     "common/colors.test.json",
+    "common/comparable.instance.json",
     "common/comparable.js",
     "common/comparable.test.json",
     "common/concept.instance.json",
@@ -294,8 +295,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.0.0-beta.57"
+    "theprogrammablemind": "8.0.0-beta.58"
   },
-  "version": "8.0.0-beta.57",
+  "version": "8.0.0-beta.58",
   "license": "UNLICENSED"
 }
