refactor list to conjunction refactor ask to asking add new askWhich function

--- a/kms/package.json
+++ b/kms/package.json
@@ -30,6 +30,7 @@
       "name": "General",
       "description": "General purpose KM's",
       "includes": [
+        "asking",
         "avatar",
         "comparable",
         "concept",
@@ -56,6 +57,7 @@
       "includes": [
         "articles",
         "nameable",
+        "conjunction",
         "dialogues",
         "gdefaults",
         "meta",
