--- a/kms/package.json
+++ b/kms/package.json
@@ -137,6 +137,9 @@
     "common/animals.test.json",
     "common/articles.js",
     "common/articles.test.json",
+    "common/asking.instance.json",
+    "common/asking.js",
+    "common/asking.test.json",
     "common/avatar.js",
     "common/avatar.test.json",
     "common/characters.js",
@@ -150,6 +153,9 @@
     "common/concept.instance.json",
     "common/concept.js",
     "common/concept.test.json",
+    "common/conjunction.instance.json",
+    "common/conjunction.js",
+    "common/conjunction.test.json",
     "common/countable.js",
     "common/countable.test.json",
     "common/crew.instance.json",
@@ -297,8 +303,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.0.0-beta.77"
+    "theprogrammablemind": "8.0.0-beta.78"
   },
-  "version": "8.0.0-beta.77",
+  "version": "8.0.0-beta.78",
   "license": "UNLICENSED"
 }
