--- a/kms/package.json
+++ b/kms/package.json
@@ -39,6 +39,7 @@
         "help",
         "hierarchy",
         "ordering",
+        "ordinals",
         "properties",
         "sizeable"
       ]
