--- a/kms/package.json
+++ b/kms/package.json
@@ -228,6 +228,9 @@
     "common/ordering.instance.json",
     "common/ordering.js",
     "common/ordering.test.json",
+    "common/ordinals.instance.json",
+    "common/ordinals.js",
+    "common/ordinals.test.json",
     "common/people.instance.json",
     "common/people.js",
     "common/people.test.json",
@@ -304,8 +307,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.0.0-beta.78"
+    "theprogrammablemind": "8.0.0-beta.79"
   },
-  "version": "8.0.0-beta.78",
+  "version": "8.0.0-beta.79",
   "license": "UNLICENSED"
 }
