--- a/kms/package.json
+++ b/kms/package.json
@@ -307,8 +307,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.1.0-beta.6"
+    "theprogrammablemind": "8.2.0"
   },
-  "version": "8.1.0-beta.6",
+  "version": "8.2.0",
   "license": "UNLICENSED"
 }
