start on km for surfacing errors to user

--- a/kms/package.json
+++ b/kms/package.json
@@ -61,6 +61,7 @@
         "conjunction",
         "dialogues",
         "gdefaults",
+        "errors",
         "meta",
         "pos",
         "punctuation",
