--- a/kms/package.json
+++ b/kms/package.json
@@ -176,6 +176,8 @@
     "common/emotions.instance.json",
     "common/emotions.js",
     "common/emotions.test.json",
+    "common/errors.js",
+    "common/errors.test.json",
     "common/evaluate.instance.json",
     "common/evaluate.js",
     "common/evaluate.test.json",
@@ -308,8 +310,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.3.0-beta.1"
+    "theprogrammablemind": "8.3.0-beta.2"
   },
-  "version": "8.3.0-beta.1",
+  "version": "8.3.0-beta.2",
   "license": "UNLICENSED"
 }
