--- a/kms/package.json
+++ b/kms/package.json
@@ -310,8 +310,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.4.0"
+    "theprogrammablemind": "8.4.0-beta.0"
   },
-  "version": "8.4.0",
+  "version": "8.4.0-beta.0",
   "license": "UNLICENSED"
 }
