--- a/kms/package.json
+++ b/kms/package.json
@@ -295,6 +295,9 @@
     "common/weight.instance.json",
     "common/weight.js",
     "common/weight.test.json",
+    "common/wp.instance.json",
+    "common/wp.js",
+    "common/wp.test.json",
     "common/yesno.js",
     "common/yesno.test.json",
     "main.js"
@@ -311,8 +314,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.9.0-beta.0"
+    "theprogrammablemind": "8.9.0-beta.1"
   },
-  "version": "8.9.0-beta.0",
+  "version": "8.9.0-beta.1",
   "license": "UNLICENSED"
 }
