add missing file to package.json

--- a/kms/package.json
+++ b/kms/package.json
@@ -196,6 +196,7 @@
     "common/help.test.json",
     "common/helpers.js",
     "common/helpers/concept.js",
+    "common/helpers/conjunction.js",
     "common/helpers/dialogues.js",
     "common/helpers/formulas.js",
     "common/helpers/frankenhash.js",
