--- a/kms/package.json
+++ b/kms/package.json
@@ -315,8 +315,8 @@
     "table": "^6.7.1",
     "base-64": "^1.0.0",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.9.0-beta.23"
+    "theprogrammablemind": "8.9.1"
   },
-  "version": "8.9.0-beta.23",
+  "version": "8.9.1",
   "license": "UNLICENSED"
 }
