--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "dependencies": {
     "node-fetch": "^2.6.1",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "8.9.0-beta.23",
+    "theprogrammablemind": "8.9.1",
     "pluralize": "^8.0.0",
-    "tpmkms": "8.9.0-beta.23",
+    "tpmkms": "8.9.1",
     "base-64": "^1.0.0"
   },
   "scripts": {
