--- a/kms/package.json
+++ b/kms/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "argparse": "^2.0.1",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0"
   },
   "scripts": {
@@ -305,17 +308,17 @@
   ],
   "author": "dev@thinktelligence.com",
   "dependencies": {
-    "object-path": "^0.11.8",
+    "argparse": "^2.0.1",
+    "base-64": "^1.0.0",
     "deep-equal": "^2.0.5",
-    "uuid": "^9.0.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
+    "object-path": "^0.11.8",
     "pluralize": "^8.0.0",
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
-    "base-64": "^1.0.0",
-    "argparse": "^2.0.1",
-    "theprogrammablemind": "8.9.1-beta.5"
+    "theprogrammablemind": "8.9.1-beta.5",
+    "uuid": "^9.0.0"
   },
   "version": "8.9.1-beta.5",
   "license": "UNLICENSED"
