--- a/kms/package.json
+++ b/kms/package.json
@@ -319,7 +319,7 @@
     "pluralize": "^8.0.0",
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
     "theprogrammablemind": "8.9.1-beta.6"
   },
   "version": "8.9.1-beta.6",
