--- a/kms/package.json
+++ b/kms/package.json
@@ -7,8 +7,8 @@
     "jest": "^29.7.0"
   },
   "scripts": {
-    "lint:fix": "eslint \"**/*.js\" --fix",
-    "lint": "eslint \"**/*.js\"",
+    "lint:fix": "eslint \"common/**/*.js\" --fix",
+    "lint": "eslint \"common/**/*.js\"",
     "tod": "node inspect node_modules/.bin/jest --runInBand -t NEO23",
     "test:debug": "node inspect node_modules/.bin/jest --runInBand --config ./jest.config.json",
     "to": "node node_modules/.bin/jest --runInBand -t NEO23",
