--- a/kms/package.json
+++ b/kms/package.json
@@ -320,8 +320,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "8.9.1-beta.44"
+    "theprogrammablemind": "9.0.0"
   },
-  "version": "8.9.1-beta.44",
+  "version": "9.0.0",
   "license": "UNLICENSED"
 }
