--- a/kms/package.json
+++ b/kms/package.json
@@ -320,8 +320,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.0.3"
+    "theprogrammablemind": "9.0.3-beta.1"
   },
-  "version": "9.0.3",
+  "version": "9.0.3-beta.1",
   "license": "UNLICENSED"
 }
