--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "dependencies": {
     "node-fetch": "^2.6.1",
     "argparse": "^2.0.1",
-    "theprogrammablemind": "9.0.3-beta.5",
+    "theprogrammablemind": "9.1.0",
     "pluralize": "^8.0.0",
-    "tpmkms": "9.0.3-beta.5",
+    "tpmkms": "9.1.0",
     "base-64": "^1.0.0"
   },
   "scripts": {
