--- a/kms/package.json
+++ b/kms/package.json
@@ -72,7 +72,8 @@
         "punctuation",
         "stm",
         "sdefaults",
-        "ui"
+        "ui",
+        "menus"
       ]
     },
     {
