--- a/kms/package.json
+++ b/kms/package.json
@@ -225,6 +225,9 @@
     "common/math.instance.json",
     "common/math.js",
     "common/math.test.json",
+    "common/menus.instance.json",
+    "common/menus.js",
+    "common/menus.test.json",
     "common/meta.instance.json",
     "common/meta.js",
     "common/meta.test.json",
@@ -321,8 +324,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.1.1"
+    "theprogrammablemind": "9.1.1-beta.0"
   },
-  "version": "9.1.1",
+  "version": "9.1.1-beta.0",
   "license": "UNLICENSED"
 }
