add missing file

--- a/kms/package.json
+++ b/kms/package.json
@@ -207,6 +207,7 @@
     "common/helpers/formulas.js",
     "common/helpers/frankenhash.js",
     "common/helpers/meta.js",
+    "common/helpers/menus.js",
     "common/helpers/ordering.js",
     "common/helpers/properties.js",
     "common/helpers/properties.js",
