--- a/kms/package.json
+++ b/kms/package.json
@@ -325,8 +325,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.2.0"
+    "theprogrammablemind": "9.2.0-beta.0"
   },
-  "version": "9.2.0",
+  "version": "9.2.0-beta.0",
   "license": "UNLICENSED"
 }
