--- a/kms/package.json
+++ b/kms/package.json
@@ -329,8 +329,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.2.0-beta.10"
+    "theprogrammablemind": "9.3.0"
   },
-  "version": "9.2.0-beta.10",
+  "version": "9.3.0",
   "license": "UNLICENSED"
 }
