--- a/kms/package.json
+++ b/kms/package.json
@@ -26,6 +26,7 @@
         "percentages",
         "colors",
         "people",
+        "self",
         "time",
         "dates",
         "yesno",
