--- a/kms/package.json
+++ b/kms/package.json
@@ -282,6 +282,9 @@
     "common/scorekeeper.test.json",
     "common/sdefaults.js",
     "common/sdefaults.test.json",
+    "common/self.instance.json",
+    "common/self.js",
+    "common/self.test.json",
     "common/sizeable.instance.json",
     "common/sizeable.js",
     "common/sizeable.test.json",
@@ -330,8 +333,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.3.0"
+    "theprogrammablemind": "9.3.0-beta.0"
   },
-  "version": "9.3.0",
+  "version": "9.3.0-beta.0",
   "license": "UNLICENSED"
 }
