--- a/kms/package.json
+++ b/kms/package.json
@@ -274,6 +274,9 @@
     "common/properties.test.json",
     "common/punctuation.js",
     "common/punctuation.test.json",
+    "common/reminders.instance.json",
+    "common/reminders.js",
+    "common/reminders.test.json",
     "common/reports.instance.json",
     "common/reports.js",
     "common/reports.test.json",
@@ -334,8 +337,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.3.0-beta.1"
+    "theprogrammablemind": "9.3.0-beta.2"
   },
-  "version": "9.3.0-beta.1",
+  "version": "9.3.0-beta.2",
   "license": "UNLICENSED"
 }
