refactor into dateTimeSelectors

--- a/kms/package.json
+++ b/kms/package.json
@@ -48,7 +48,8 @@
         "ordering",
         "ordinals",
         "properties",
-        "sizeable"
+        "sizeable",
+        "dateTimeSelectors"
       ]
     },
     {
@@ -216,7 +217,7 @@
     "common/helpers/meta.js",
     "common/helpers/ordering.js",
     "common/helpers/properties.js",
-    "common/helpers/reminders.js",
+    "common/helpers/dateTimeSelectors.js",
     "common/hierarchy.js",
     "common/hierarchy.test.json",
     "common/javascript.js",
