--- a/kms/package.json
+++ b/kms/package.json
@@ -176,6 +176,9 @@
     "common/crew.test.json",
     "common/currency.js",
     "common/currency.test.json",
+    "common/dateTimeSelectors.instance.json",
+    "common/dateTimeSelectors.js",
+    "common/dateTimeSelectors.test.json",
     "common/dates.instance.json",
     "common/dates.js",
     "common/dates.test.json",
@@ -210,6 +213,7 @@
     "common/helpers.js",
     "common/helpers/concept.js",
     "common/helpers/conjunction.js",
+    "common/helpers/dateTimeSelectors.js",
     "common/helpers/dialogues.js",
     "common/helpers/formulas.js",
     "common/helpers/frankenhash.js",
@@ -217,7 +221,6 @@
     "common/helpers/meta.js",
     "common/helpers/ordering.js",
     "common/helpers/properties.js",
-    "common/helpers/dateTimeSelectors.js",
     "common/hierarchy.js",
     "common/hierarchy.test.json",
     "common/javascript.js",
@@ -338,8 +341,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.3.0-beta.9"
+    "theprogrammablemind": "9.3.0-beta.10"
   },
-  "version": "9.3.0-beta.9",
+  "version": "9.3.0-beta.10",
   "license": "UNLICENSED"
 }
