--- a/kms/package.json
+++ b/kms/package.json
@@ -341,8 +341,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.4.2-beta.1"
+    "theprogrammablemind": "9.4.3"
   },
-  "version": "9.4.2-beta.1",
+  "version": "9.4.3",
   "license": "UNLICENSED"
 }
