--- a/kms/package.json
+++ b/kms/package.json
@@ -130,6 +130,13 @@
         "kirk",
         "spock"
       ]
+    },
+    {
+      "name": "Latin",
+      "description": "sententias latinas machina intelligere",
+      "includes": [
+        "latin"
+      ]
     }
   ],
   "keywords": [
@@ -145,6 +152,9 @@
   "description": "Reusable libraries for Entodicton, a natural language to json converter",
   "name": "tpmkms",
   "files": [
+    "common/latin.instance.json",
+    "common/latin.js",
+    "common/latin.test.json",
     "common/animals.instance.json",
     "common/animals.js",
     "common/animals.test.json",
