--- a/kms/package.json
+++ b/kms/package.json
@@ -351,8 +351,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.4.4-beta.1"
+    "theprogrammablemind": "9.4.5"
   },
-  "version": "9.4.4-beta.1",
+  "version": "9.4.5",
   "license": "UNLICENSED"
 }
