--- a/kms/package.json
+++ b/kms/package.json
@@ -217,6 +217,7 @@
     "common/gdefaults.test.json",
     "common/help.js",
     "common/help.test.json",
+    "common/latin_helpers.js",
     "common/helpers.js",
     "common/helpers/concept.js",
     "common/helpers/conjunction.js",
