--- a/kms/package.json
+++ b/kms/package.json
@@ -352,8 +352,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.4.5-beta.12"
+    "theprogrammablemind": "9.5.0"
   },
-  "version": "9.4.5-beta.12",
+  "version": "9.5.0",
   "license": "UNLICENSED"
 }
