--- a/kms/package.json
+++ b/kms/package.json
@@ -239,6 +239,7 @@
     "common/latin.js",
     "common/latin.test.json",
     "common/latin_helpers.js",
+    "common/english_helpers.js",
     "common/length.instance.json",
     "common/length.js",
     "common/length.test.json",
